@@ -66,6 +66,10 @@ private:
 
     //! A label for the text
     MLabel *label;
+
+#ifdef UNIT_TEST
+    friend class Ut_StatusIndicatorLabelView;
+#endif
 };
 
 #endif // STATUSINDICATORLABELVIEW_H
