@@ -56,6 +56,7 @@ private slots:
 
     // Test cases
     void testLabelChanged();
+    void testStylePostfixChanged();
     void testModelChanged();
 
 private:
