@@ -1,6 +1,7 @@
 system-ui (1.0.22~1) unstable; urgency=low
 
   * [UNRELEASED]
+  * Fixes: NB#273889 - [TASK] Operator name should be replaced with "Emergency calls only" when in limited service state and there is a network available
 
  -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 10 Aug 2011 13:30:03 +0300
 
